Module 7 - Ingress/Ingress Rules - Ćwiczenia/dumpster-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: dumpster-app
spec:
  selector:
    app: dumpster-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dumpster-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dumpster-app
  template:
    metadata:
      labels:
        app: dumpster-app
    spec:
      containers:
      - name: dumpster-app
        image: gutek/dumpster:v1
        ports:
        - containerPort: 8080
