Module 7 - Ingress/Ingress Rules - Ćwiczenia/echo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
spec:
  selector:
    app: echo-app
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo-app
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
