Module 7 - Ingress/Ingress Rules - Ćwiczenia/hello-app-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1
spec:
  selector:
    app: hello-app-v1
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app-v1
  template:
    metadata:
      labels:
        app: hello-app-v1
    spec:
      containers:
      - name: hello-app-v1
        image: poznajkubernetes/helloapp:svc
        ports:
        - containerPort: 8080
