Module 7 - Ingress/Ingress Rules - Ćwiczenia/ingress-capture-all.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: capture-all
spec:
  backend:
    serviceName: hello-app-v1
    servicePort: 8080
