Module 7 - Ingress/Ingress Rules - Ćwiczenia/ingress-fanout.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:  
  - http:
      paths:
      - path: /v1/?(.*)
        backend: 
          serviceName: hello-app-v1
          servicePort: 8080
      - path: /v2/?(.*)
        backend: 
          serviceName: hello-app-v2
          servicePort: 8080
      - path: /echo/?(.*)
        backend: 
          serviceName: echo-app
          servicePort: 8080
