Module 7 - Ingress/Ingress Rules - Ćwiczenia/ingress-host-routing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-routing
spec:
  rules:
  - host: v1.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: hello-app-v1
          servicePort: 8080
  - host: v2.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: hello-app-v1
          servicePort: 8080
  - host: echo.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: echo-app
          servicePort: 8080
